--- a/KeyStroker.UserInterface/UserControls/Tabs/CreateMacro.xaml
+++ b/KeyStroker.UserInterface/UserControls/Tabs/CreateMacro.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="KeyStroker.UI.UserControls.Tabs.MacroManager"
+﻿<UserControl x:Class="KeyStroker.UI.UserControls.Tabs.CreateMacro"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,16 +14,20 @@
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
     <Grid>
-        <TabControl Margin="0">
-            
-            
-            <TabItem Header="Create">
-                <local:CreateMacro></local:CreateMacro>
-            </TabItem>
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-        </TabControl>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid Margin="10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Key" Width="1*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Event" Width="1*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Interval" Width="1*"></DataGridTextColumn>
+                <DataGridCheckBoxColumn Header="Enabled" Width="1"></DataGridCheckBoxColumn>
+            </DataGrid.Columns>
+        </DataGrid>
 
     </Grid>
 </UserControl>
