--- a/KeyStroker.UserInterface/UserControls/Tabs/KeySpammer.xaml
+++ b/KeyStroker.UserInterface/UserControls/Tabs/KeySpammer.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              
              TextElement.FontWeight="Medium"
@@ -23,7 +24,8 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="83*"/>
+            <RowDefinition/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -31,8 +33,9 @@
             <ColumnDefinition Width="125"/>
             <ColumnDefinition Width="100"/>
         </Grid.ColumnDefinitions>
+
         <!-- Button grid -->
-        <DataGrid Margin="10,10,10,10" Grid.RowSpan="5" ItemsSource="{Binding Buttons, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItem="{Binding SelectedButton}" AutoGenerateColumns="False">
+        <DataGrid x:Name="ButtonDataGrid" ItemsSource="{Binding Buttons, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItem="{Binding SelectedButton}" AutoGenerateColumns="False" Margin="10,10,10,10" Grid.RowSpan="5">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Key" Binding="{Binding KeyCodeStr}" IsReadOnly="True" Width="1*"></DataGridTextColumn>
                 <DataGridTextColumn Header="Interval" Binding="{Binding Interval}" IsReadOnly="True" Width="1*"></DataGridTextColumn>
@@ -41,28 +44,35 @@
         </DataGrid>
 
         <!-- Button to spam, in human readable form -->
-        <TextBox Text="{Binding SelectedButton.KeyCodeStr, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" md:HintAssist.Hint="Key" md:HintAssist.IsFloating="True" md:HintAssist.HelperText="Key to spam" TextWrapping="Wrap"
+        <TextBox x:Name="text_KeyCode" Text="{Binding SelectedButton.KeyCodeStr, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" md:HintAssist.Hint="Key" md:HintAssist.IsFloating="True" md:HintAssist.HelperText="Key to spam" TextWrapping="Wrap"
                  Margin="10,0,10,10" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" />
-        
-        <!-- Interval slider & label -->
-        <Slider x:Name="msSLider" Value="{Binding SelectedButton.Interval, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  TickFrequency="5" Minimum="0" Maximum="10000" 
-                Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"/>
 
-        <Label Content="{Binding ms}"
+        <!-- Interval slider & label -->
+        <Slider x:Name="slider_Ms" Value="{Binding SelectedButton.Interval, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  TickFrequency="5" Minimum="0" Maximum="10000" 
+                Margin="10,0,10,0" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"/>
+
+        <Label x:Name="label_Ms" Content="{Binding ms}"
                Margin="10,0,10,0" VerticalAlignment="Center" Height="24" Grid.Row="2"  Grid.Column="3"/>
 
         <!-- Is the button spammer enabled for this button -->
-        <CheckBox x:Name="EnabledTick" IsChecked="{Binding SelectedButton.IsEnabled, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Content="Enabled"
+        <CheckBox x:Name="cb_IsEnabled" IsChecked="{Binding SelectedButton.IsEnabled, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Content="Enabled"
                   Margin="10,10,10,0"  Grid.Column="3"  Grid.Row="4" Height="31" VerticalAlignment="Top"/>
 
-        <TextBox Text="{Binding SelectedButton.RepeatAmount, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" md:HintAssist.Hint="Repeat amount" md:HintAssist.IsFloating="True" md:HintAssist.HelperText="The amount of times to repeat the action" TextWrapping="Wrap"
+        <TextBox x:Name="text_RepeatAmount" Text="{Binding SelectedButton.RepeatAmount, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" TextWrapping="Wrap"
+                 md:HintAssist.Hint="Repeat amount" md:HintAssist.IsFloating="True" md:HintAssist.HelperText="0 mean infinitely" 
                  Grid.Column="1" Grid.Row="3" VerticalAlignment="Top" Margin="10,0,10,0" Grid.ColumnSpan="2" Height="40"/>
 
-        <Button Content="Set" Command="{Binding SetNewKey}"
-                Margin="10" Grid.Column="3"  Grid.Row="1" VerticalAlignment="Center"/>
+        <CheckBox x:Name="cb_Infinitely" Content="Infinitely" IsChecked="{Binding SelectedButton.InfinityTimes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                  Margin="10,10,10,10"  Grid.Column="3" Grid.Row="3"/>
 
-        <CheckBox Content="Infinitely" IsChecked="{Binding SelectedButton.InfinityTimes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                  Margin="10"  Grid.Column="3" Grid.Row="3"/>
+        
+        
+        <Button x:Name="btn_setNew" Content="Set" Command="{Binding SetNewKey}"
+                Margin="10,0,10,0" Grid.Column="3"  Grid.Row="1" VerticalAlignment="Center"/>
+        <Button x:Name="btn_save" Content="Save" Command="{Binding Add}"
+                Margin="10" Grid.Column="3"  Grid.Row="5"/>
+        <Button x:Name="btn_remove" Content="Remove" Command="{Binding Remove}"
+                Margin="10" Grid.Column="0"  Grid.Row="5" VerticalAlignment="Center" HorizontalAlignment="Right" Width="100"/>
 
     </Grid>
 </UserControl>
