--- a/KeyStroker.UserInterface/Templates/HamburgerMenu.xaml
+++ b/KeyStroker.UserInterface/Templates/HamburgerMenu.xaml
@@ -41,8 +41,9 @@
                             Foreground="White"
                             Text="{Binding Label}" />
             </Border>
-            <ComboBox Name="a" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Width="200" ItemsSource="{Binding Profiles}"></ComboBox>
-            
+
+            <ComboBox Name="a" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Width="200" ItemsSource="{Binding Profiles, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=mah:MetroWindow}}"></ComboBox>
+
             <ContentControl x:Name="TheContent"
                             Grid.Row="1"
                             Focusable="False"
