--- a/KeyStroker.UserInterface/UserControls/Tabs/Home.xaml
+++ b/KeyStroker.UserInterface/UserControls/Tabs/Home.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:KeyStroker.UI.UserControls.Tabs"
+             xmlns:local="clr-namespace:KeyStroker.UI.UserControls.Tabs" xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              TextElement.FontWeight="Medium"
@@ -12,9 +12,67 @@
              TextOptions.TextRenderingMode="Auto"        
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}" >
-    
+
     <Grid>
-            
+        <md:DialogHost IsOpen="{Binding CreatingNewProfile}">
+            <md:DialogHost.DialogContent>
+                <Grid>
+                    <local:CreateProfileDialog ProfileName="{Binding ProfileName}" ActionConfirm="{Binding ActionConfirm}" ActionBack="{Binding ActionBack}" ></local:CreateProfileDialog>
+                </Grid>
+            </md:DialogHost.DialogContent>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+
+                <Label Content="Select profile" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                       Margin="10,10,10,10" Grid.ColumnSpan="2" Grid.Column="1"  />
+
+                <ComboBox x:Name="ProfileCombo" ItemsSource="{Binding Profiles}" DisplayMemberPath="Name" SelectedIndex="0" SelectedItem="{Binding SelectedProfile}" Foreground="Black"
+                   Margin="10" Grid.ColumnSpan="2" Grid.Column="1"  Grid.Row="1" VerticalAlignment="Top" DropDownOpened="OnSelectionStarting" DropDownClosed="OnSelectionEnding" ></ComboBox>
+
+                <Button Content="Create new" Command="{Binding CreateNewProfile}" HorizontalAlignment="Center"  VerticalAlignment="Center" Grid.Row="1" Grid.Column="3"/>
+
+                <mah:FlipView x:Name="Flipper" Grid.ColumnSpan="4" Margin="10" Grid.Row="3" IsBannerEnabled="False" IsNavigationEnabled="False" BorderBrush="Transparent" SelectedIndex="1">
+                    <mah:FlipView.Items>
+
+                        <!-- Empty item to show when no profiles selected or profile is being selected currently-->
+                        <mah:FlipViewItem>
+                            <Grid></Grid>
+                        </mah:FlipViewItem>
+
+                        <mah:FlipViewItem>
+                            <Grid Margin="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="1*"/>
+                                    <RowDefinition Height="1*"/>
+                                    <RowDefinition Height="1*"/>
+                                    <RowDefinition Height="1*"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox md:HintAssist.Hint="asd" md:HintAssist.IsFloating="True" md:HintAssist.HelperText="Hotkey can be modifier(s) + one key" Margin="10" Grid.Column="1"/>
+                                <Button Content="Set" Grid.Column="2" Margin="10"></Button>
+                            </Grid>
+                        </mah:FlipViewItem>
+                    </mah:FlipView.Items>
+                </mah:FlipView>
+
+            </Grid>
+        </md:DialogHost>
     </Grid>
-    
+
 </UserControl>
